CHANGES for Netcdf-Java library
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 4.1:
 6:
  nasty bug in Index.scalarIndexImmutable
  redo NCdumpW.writeNcML to use Formatter
  fix sync() in all iosps we control
  ucar.nc2.ft.point.standard.Evaluator() uses equals() instead of ==
  add pointstream error handling; add NcStream.Error message
  aggExisting caching now works correctly
  cdmremote point: get DateRange filter working
  optionally add time resolution in server config
  CdmRemoteFeatureDataset gets bb, dateRange from capabilities doc
  cdmRemote req=form
  ncstream anon dimensions
  cdmRemote east/west flipped
 5:
  AggFmrc: 2D time coordinate switch to double (when numeric) to avoid round-off.
  URLDumpPane, TdsReadLogs : escape query string
  NppConvention for NPOESS
 4:
  ui/iosp: Grib2 Table
  Array.createView was not propagating isUnsigned()
  ui.StructureTable also shows nominal time if possible
  PointFeatureImpl checks if nominal time == 0, if so use obsTime. workaround for protobuf lask of NaN default
  refactor station point classes
  CdmRemoteFeatureDatset is not a CdmRemote
  optimise hashmap in StructureMembers
  GridTableLookup.Curvilinear requires external 2D lat/lon
 3:
  qunhe@unc.edu minor changes for UTM
  ToolsUI: ncml prototypes in NcmlEditor pane
  hack enhance back into ncml scan element, needed for WRF and anyone who needs CoordSysBuilder intervention
  more GRIB ensemble work
  cdmremote working again
  composite stations work correctly
 2:
  StationPointFeature, StationCollection.flatten
  catalog2 refactor
 1:
  GRIB library 8.0
  Back out DateUnit changes - too many small glitches - revert to 4.0 code base
  UAMIVServiceProvider looks for camxproj.txt for config info
  ScaleMissingEnhance: assume if forVar isUnsigned, data conversion should use unsigned data, regardless of orgVar
  Contiguous Table : dont add startRaggedArray variable, keep internal