@@ -38,6 +38,8 @@ import ucar.nc2.dataset.ProjectionCT;
 import ucar.nc2.dataset.NetcdfDataset;
 import ucar.nc2.dataset.TransformType;
 import ucar.nc2.Variable;
+import ucar.unidata.geoloc.projection.proj4.AlbersEqualAreaEllipse;
+import ucar.unidata.geoloc.Earth;
 
 /**
  * Create a AlbersEqualArea Projection from the information in the Coordinate Transform Variable.
@@ -69,8 +71,23 @@ public class AlbersEqualArea extends AbstractCoordTransBuilder {
       false_northing *= scalef;
     }
 
-    ucar.unidata.geoloc.projection.AlbersEqualArea proj =
-            new ucar.unidata.geoloc.projection.AlbersEqualArea(lat0, lon0, pars[0], pars[1], false_easting, false_northing);
+    double earth_radius = readAttributeDouble(ctv, "earth_radius", Earth.getRadius() * .001);
+
+    double semi_major_axis = readAttributeDouble(ctv, "semi_major_axis", Double.NaN);
+    double semi_minor_axis = readAttributeDouble(ctv, "semi_minor_axis", Double.NaN);
+    double inverse_flattening = readAttributeDouble(ctv, "inverse_flattening", 0.0);
+
+    ucar.unidata.geoloc.ProjectionImpl proj;
+
+    // check for ellipsoidal earth
+    if (!Double.isNaN(semi_major_axis) && (!Double.isNaN(semi_minor_axis) || inverse_flattening != 0.0)) {
+      Earth earth = new Earth(semi_major_axis, semi_minor_axis, inverse_flattening);
+      proj = new AlbersEqualAreaEllipse(lat0, lon0, pars[0], pars[1], false_easting, false_northing, earth);
+
+    } else {
+      proj = new ucar.unidata.geoloc.projection.AlbersEqualArea(lat0, lon0, pars[0], pars[1], false_easting, false_northing, earth_radius);
+    }
+
     return new ProjectionCT(ctv.getShortName(), "FGDC", proj);
   }
 }
